<resources>
    <string name="app_name">kotljetpack</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="workmanager_de">设置任务在联网状态下，充电时，电量充足时，存储容量充足的条件下执行</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="password">qwe1234</string>
    <string name="phone_number">13162683391</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>

    <string name="no_data">No Data</string>


    <string name="router_hilt">hilt</string>
    <string name="router_login">登陆</string>
    <string name="router_lifecycle">lifecycle</string>
    <string name="router_viewmodellivedata">viewmodel+livedata</string>
    <string name="router_vlf">viewmodel+livedata+fragment共享数据</string>
    <string name="router_room">room</string>
    <string name="router_databinding">databinding</string>
    <string name="router_databinding_sample">databinding_sample</string>
    <string name="router_navigation">navigation</string>
    <string name="router_workmanager">workmanager</string>
    <string name="router_kotlin">kotlin</string>
    <string name="router_applist">应用列表</string>

    <string name="coroutines">Coroutines</string>
</resources>