<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/fab_bottom_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_normal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_demo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_kotlin"
                android:textAllCaps="false"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_hilt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_hilt"
                android:textAllCaps="false"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_login"
                android:textAllCaps="false"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_lifecycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_lifecycle"
                android:textAllCaps="false"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_viewmodel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_viewmodellivedata"
                android:textAllCaps="false"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_vm_changefrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_vlf"
                android:textAllCaps="false"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_room"
                android:textAllCaps="false"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_databinding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_databinding"
                android:textAllCaps="false"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_databinding_sample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_databinding_sample"
                android:textAllCaps="false"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_navigation"
                android:textAllCaps="false"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_workmanager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_workmanager"
                android:textAllCaps="false"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_applist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8x"
                android:text="@string/router_applist"
                android:textAllCaps="false"
                android:tint="@android:color/white" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>
